--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
 html {
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
+  scrollbar-width: thin;
+  scrollbar-color: #ff0019 #000;
 
   *,*::before, *::after{
     box-sizing: inherit;
